DevOCL/src/objects/CLQ_Child_Record__c.object
<CustomObject>
    <description>Overview of the children enrolled in the Program.</description>
    <fields>
        <fullName>CLQ_Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_All_Files_In_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Files In Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Child Records</relationshipLabel>
        <relationshipName>Child_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Child_DOB__c</fullName>
        <formula>CLQ_Contact__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Child Records</relationshipLabel>
        <relationshipName>Child_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Enrollment__c</fullName>
        <description>Select all the options that are applicable.</description>
        <inlineHelpText>Select all the options that are applicable.</inlineHelpText>
        <label>Enrollment</label>
        <picklist>
            <picklistValues>
                <fullName>Parent Information Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signatures Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Annual Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Information Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handbook Statement Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Contact Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Information Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diapering Information Incomplete</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Child Record object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>CLQ_Inspection__c</referenceTo>
        <relationshipLabel>Child Records</relationshipLabel>
        <relationshipName>Child_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Medical_Physical_Care_Plan__c</fullName>
        <description>Select all the applicable options.</description>
        <inlineHelpText>Select all the applicable options.</inlineHelpText>
        <label>Medical-Physical Care Plan</label>
        <picklist>
            <picklistValues>
                <fullName>No Plan on File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signatures Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Trained Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Not Updated</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Medical_Statement__c</fullName>
        <description>Select Multiple Options if applicable.</description>
        <inlineHelpText>Select Multiple Options if applicable.</inlineHelpText>
        <label>Medical Statement</label>
        <picklist>
            <picklistValues>
                <fullName>No Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor Signature Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Immunization Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Immunization Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Not Completed</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Medication__c</fullName>
        <description>Select all the applicable options.</description>
        <inlineHelpText>Select all the applicable options.</inlineHelpText>
        <label>Medication</label>
        <picklist>
            <picklistValues>
                <fullName>No Medication Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Separate Form Each Med</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medication Form Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medication Form Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instructions Not Followed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medication Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rx Label Incorrect Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Rx No Instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Rx Underage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medication Not Labeled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Original Container</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Medication Administered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administered Too Long</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Number_of_Files_Reviewed__c</fullName>
        <label>Number of Files Reviewed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Permission_Slips__c</fullName>
        <description>Select all the applicable options.</description>
        <inlineHelpText>Select all the applicable options.</inlineHelpText>
        <label>Permission Slips</label>
        <picklist>
            <picklistValues>
                <fullName>Routine Form Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swimming Form Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Trip Form Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Routine Permission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Field Trip Permission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Swimming Permission</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>CLQ_Program__c</referenceTo>
        <relationshipLabel>Child Records</relationshipLabel>
        <relationshipName>Child_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Child Record</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Child Identifier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>